--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -16,7 +16,7 @@
     = form.label :score, "-", {value: :none, style: "display: inline-block;"}
   .field
     = form.label :body
-    = form.text_area :body, cols: "17", rows: "5", wrap: "hard"
+    = form.text_area :body, cols: "27", rows: "5"
   .field
     = form.hidden_field :start_time
     = form.hidden_field :date
