--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -20,17 +20,18 @@
 = link_to 'New Task', new_task_path
 = month_calendar events: @tasks do |date, tasks|
   = date.to_formatted_s(:only_date)
-  - tasks.each do |task|
-    = link_to "edit", edit_task_path(task), class: "edit_link"
   = link_to new_task_path(date) do
     .new_task_link
       new
   - tasks.each do |task|
     - if task.score == "done"
-      = icon('fa', 'check', class: "task_score check-icon")
+      = link_to edit_task_path(task) do
+        = icon('fa', 'check', class: "task_score check-icon")
     - elsif task.score == "bad"
       = icon('fa', 'times', class: "task_score bad-icon")
     - else
       .task_score
-    .task_body
-      = task.body
+    - if task.body != ""
+      = link_to edit_task_path(task) do
+        .task_body
+          = simple_format task.body
