--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 *= require simple_calendar
 */
 @import "reset";
-@import "scaffolds";
+@import "welcome";
 @import "tasks";
 @import "font-awesome-sprockets";
 @import "font-awesome";
