--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -20,5 +20,6 @@
   .field
     = form.hidden_field :start_time
     = form.hidden_field :date
+    = form.hidden_field :user_id
   .actions
     = form.submit
