--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,8 +13,7 @@
         = link_to "Routine diary", root_path, class: "logo"
         - if user_signed_in?
           .menu-list
-            .menu-list__menu
-              マイページ
+            = link_to current_user.name, user_path(current_user), class: "menu-list__menu"
             = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "menu-list__menu"
         - else
           .menu-list
