--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,6 @@
 @import "reset";
 @import "welcome";
 @import "tasks";
+@import "flash";
 @import "font-awesome-sprockets";
 @import "font-awesome";
