update user page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "reset";
 @import "welcome";
 @import "tasks";
+@import "users";
 @import "flash";
 @import "font-awesome-sprockets";
 @import "font-awesome";
