--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
   %body
     %header
       .nav-bar
-        = link_to "Routine diary", root_path, class: "logo"
+        = link_to "トップページ", root_path, class: "logo"
         - if user_signed_in?
           .menu-list
             = link_to "マイページ", user_path(current_user), class: "menu-list__menu"
