--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -1,12 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+
 a {
   color: #000;
   text-decoration: none;
 }
 
 header {
-  background-color: lightseagreen;
+  background-color: rgb(0, 165, 124);
   width: 100%;
   height: 50px;
+  box-shadow: 0 1px 5px;
+  position: relative;
 
   .nav-bar {
     display: flex;
@@ -16,6 +22,7 @@ header {
     justify-content: space-between;
 
     .logo {
+      color: white;
       width: 120px;
       margin-left: 20px;
     }
@@ -24,7 +31,9 @@ header {
       display: flex;
 
       &__menu {
-        margin-right: 20px
+        color: white;
+        margin-right: 20px;
+        
       }
     }
   }
