--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "welcome";
 @import "tasks";
 @import "users";
+@import "calendar";
 @import "flash";
 @import "font-awesome-sprockets";
 @import "font-awesome";
