--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -56,7 +56,7 @@
           display: flex;
           justify-content: space-between;
           width: 100%;
-          height: 30px;
+          height: 32px;
           line-height: 30px;
           padding: 0 5px;
           margin-bottom: 5px;
@@ -70,13 +70,13 @@
             &__content {
               width: 80%;
               font-size: 18px;
-              overflow: hidden;
+              overflow-x: auto;
               white-space: nowrap;
-              text-overflow: ellipsis;
+
             }
             &__start-date {
               width: 20%;
-              font-size: 12px;
+              font-size: 10px;
               padding: 0 5px;
               overflow: hidden;
               white-space: nowrap;
