--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,9 @@
 .contents
-  = render "profile"
+  .user-header
+    - if @user.id == current_user.id
+      = render "prof_myself"
+    - else
+      = render "prof_others"
   = render "calendar"
   
   
