--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -8,12 +8,14 @@ a {
 }
 
 header {
-  background-color: rgb(0, 165, 124);
+  background-color: rgb(0, 91, 165,);
+  opacity: 0.98;
   width: 100%;
   height: 50px;
-  box-shadow: 0 1px 5px;
-  position: relative;
-
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  
   .nav-bar {
     display: flex;
     height: 50px;
