change calendar layout

--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -1,10 +1,14 @@
 .simple-calendar
   .calendar-heading
-    = link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view
-    %span.calendar-title
-      = t('date.month_names')[start_date.month]
-      = start_date.year
-    = link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view
+    .calendar-heading__year
+      = "#{start_date.year}年"
+    .calendar-heading__month
+      = link_to calendar.url_for_previous_view do
+        = icon('fas', 'arrow-circle-left', class: "month-btn month-btn--prev")
+      .this-month
+        = t('date.month_names')[start_date.month]
+      = link_to calendar.url_for_next_view do
+        = icon('fas', 'arrow-circle-right', class: "month-btn month-btn--next")
   %table.table.table-striped
     %thead
       %tr
