--- a/app/assets/stylesheets/_calendar.scss
+++ b/app/assets/stylesheets/_calendar.scss
@@ -1,13 +1,30 @@
 .simple-calendar {
   background-color: white;
   max-width: 800px;
-  margin: 20px auto;
+  margin: 15px auto;
   box-shadow: 1px 1px 5px rgb(136, 136, 136);
   border: 1px solid black;
-  padding: 10px;
+  padding: 5px 10px 10px;
   .calendar-heading {
     text-align: center;
-    
+
+    &__year {
+      font-size: 14px;
+    }
+    &__month {
+      display: flex;
+      justify-content: center;
+      font-size: 20px;
+      margin-top: -5px;
+
+      .this-month {
+        margin: 0 40px;
+      }
+
+      .month-btn {
+        color: rgb(0, 91, 165);
+      }
+    }
   }
   
   table {
