--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -1,15 +1,19 @@
 .contents {
-  background-color: rgb(209, 255, 255);
+  background-color: white;
   height: 100vh;
   width: 100%;
+  padding-top: 50px;
+
   .user-header {
-    background-color: #eaeaea;
+    background-color: white;
+    border: 1px solid lightskyblue;
     width: 100%;
-    height: 135px;
-    box-shadow: 0 1px 5px;
+    height: 140px;
+    box-shadow: 0 1px 3px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 
     &__left {
       width: 150px;
@@ -23,6 +27,7 @@
         height: 100px;
         width: 100px;
         border-radius: 50%;
+        border: 1px solid lightskyblue;
         img {
           border-radius: 50%;
         }
@@ -34,25 +39,36 @@
       max-width: 800px;
       width: 70%;
       height: 120px;
-      border: 1px solid gray;
+      border: 1px solid lightskyblue;
       display: flex;
       
-      .new-routine-link {
-        color: rgb(0, 109, 0);
-        font-size: 20px;
-        margin: 10px 0 0 5px;
+      .new-link {
+        height: 20px;
+        .new-link__icon {
+          color: rgb(0, 58, 146);
+          font-size: 20px;
+          margin: 10px 0 0 5px;
+        }
       }
 
       .routine-list {
         width: 96%;
         padding: 5px;
+        margin: 0 auto;
         overflow-x: scroll;
         ::-webkit-scrollbar {
           display: none;
         }
 
+        &__message {
+          color: gray;
+          height: 20px;
+          margin-top: 2px;
+        }
+
         .routine {
-          background-color: rgb(217, 245, 255);
+          background-color: rgb(238, 252, 255);
+          box-shadow: 1px 1px 3px lightslategray;
           display: flex;
           justify-content: space-between;
           width: 100%;
@@ -60,7 +76,7 @@
           line-height: 30px;
           padding: 0 5px;
           margin-bottom: 5px;
-          border: 1px solid lightskyblue;
+          border: 1px solid lightskyblue;  
 
           &__text-box{
             display: flex;
@@ -84,29 +100,60 @@
             }
           }
 
-          &__icons {
-            
+          &__icons {        
             .routine__icon {
-              color: rgb(0, 109, 0);
+              color: rgb(0, 58, 146);;
               &--edit {
-
               }
               &--destroy {
-  
               }
             }
           }
         }
       }
-      
     }
 
     &__right {
-      background-color: white;
       height: 120px;
       width: 150px;
       margin-left: 10px;
-      border: 1px solid gray;
+      border: 1px solid lightskyblue;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .continuous-days {
+        text-align: center;
+
+        .count-top {
+          margin: 15px auto 0;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          line-height: 50px;
+
+          .count {
+            font-size: 50px;
+            color: rgb(252, 81, 81);
+          }
+
+          .unit {
+            font-size: 16px;
+            margin-left: 5px;
+            
+          }
+        }
+
+        .text {
+          width: 100%;
+        }
+      }
+
+      .done-days {
+        width: 100%;
+        font-size: 12px;
+        text-align: center;
+      }
     }
   }
        
