--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -1,23 +1,35 @@
-.contents {
+.user-header {
   background-color: white;
-  height: 100vh;
+  border: 1px solid lightskyblue;
   width: 100%;
-  padding-top: 50px;
+  height: 160px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 
-  .user-header {
-    background-color: white;
-    border: 1px solid lightskyblue;
-    width: 100%;
-    height: 140px;
-    box-shadow: 0 1px 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+  &__left {
 
-    &__left {
-      width: 150px;
-      
+    .user-menu-list {
+      display: flex;
+      font-size: 12px;
+      margin: -2px 5px 0;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+
+      .user-menu {
+        margin: 0 5px;
+        text-align: center;
+        .count {
+          font-size: 11px;
+        }
+      }
+    }
+    
+    .user-info {
+      margin: 5px 10px 0 0;
       &__name {
         text-align: center;
       }
@@ -33,130 +45,129 @@
         }
       }
     }
+  }
 
-    &__center {
-      background-color: white;
-      max-width: 800px;
-      width: 70%;
-      height: 120px;
-      border: 1px solid lightskyblue;
-      display: flex;
-      
-      .new-link {
-        height: 20px;
-        .new-link__icon {
-          color: rgb(0, 58, 146);
-          font-size: 20px;
-          margin: 10px 0 0 5px;
-        }
-      }
-
-      .routine-list {
-        width: 96%;
-        padding: 5px;
-        margin: 0 auto;
-        overflow-x: scroll;
-        ::-webkit-scrollbar {
-          display: none;
-        }
-
-        &__message {
-          color: gray;
-          height: 20px;
-          margin-top: 2px;
-        }
-
-        .routine {
-          background-color: rgb(238, 252, 255);
-          box-shadow: 1px 1px 3px lightslategray;
-          display: flex;
-          justify-content: space-between;
-          width: 100%;
-          height: 32px;
-          line-height: 30px;
-          padding: 0 5px;
-          margin-bottom: 5px;
-          border: 1px solid lightskyblue;  
-
-          &__text-box{
-            display: flex;
-            justify-content: space-between;
-            width: calc(100% - 40px);
-
-            &__content {
-              width: 80%;
-              font-size: 18px;
-              overflow-x: auto;
-              white-space: nowrap;
-
-            }
-            &__start-date {
-              width: 20%;
-              font-size: 10px;
-              padding: 0 5px;
-              overflow: hidden;
-              white-space: nowrap;
-              text-overflow: ellipsis;
-            }
-          }
-
-          &__icons {        
-            .routine__icon {
-              color: rgb(0, 58, 146);;
-              &--edit {
-              }
-              &--destroy {
-              }
-            }
-          }
-        }
+  &__center {
+    background-color: white;
+    max-width: 800px;
+    width: 50%;
+    height: 150px;
+    border: 1px solid lightskyblue;
+    // box-shadow: -1px -1px 3px gray;
+    display: flex;
+    
+    .new-link {
+      height: 20px;
+      .new-link__icon {
+        color: rgb(0, 58, 146);
+        font-size: 20px;
+        margin: 10px 0 0 5px;
       }
     }
 
-    &__right {
-      height: 120px;
-      width: 150px;
-      margin-left: 10px;
-      border: 1px solid lightskyblue;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-      .continuous-days {
-        text-align: center;
-
-        .count-top {
-          margin: 15px auto 0;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          line-height: 50px;
-
-          .count {
-            font-size: 50px;
-            color: rgb(252, 81, 81);
-          }
-
-          .unit {
-            font-size: 16px;
-            margin-left: 5px;
-            
-          }
-        }
-
-        .text {
-          width: 100%;
-        }
+    .routine-list {
+      width: 96%;
+      padding: 5px;
+      margin: 0 auto;
+      overflow-x: scroll;
+      ::-webkit-scrollbar {
+        display: none;
       }
 
-      .done-days {
+      &__message {
+        color: gray;
+        height: 20px;
+        margin-top: 2px;
+      }
+
+      .routine {
+        background-color: rgb(238, 252, 255);
+        box-shadow: 1px 1px 3px lightslategray;
+        display: flex;
+        justify-content: space-between;
         width: 100%;
-        font-size: 12px;
-        text-align: center;
+        height: 35px;
+        line-height: 33px;
+        padding: 0 5px;
+        margin-bottom: 10px;
+        border: 1px solid lightskyblue;  
+
+        &__text-box{
+          display: flex;
+          justify-content: space-between;
+          width: calc(100% - 40px);
+
+          &__content {
+            width: 80%;
+            font-size: 18px;
+            overflow-x: auto;
+            white-space: nowrap;
+
+          }
+          &__start-date {
+            width: 20%;
+            font-size: 10px;
+            padding: 0 5px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+          }
+        }
+
+        &__icons {        
+          .routine__icon {
+            color: rgb(0, 58, 146);;
+            &--edit {
+            }
+            &--destroy {
+            }
+          }
+        }
       }
     }
   }
-       
-    
 
+  &__right {
+    height: 150px;
+    width: 125px;
+    border: 1px solid lightskyblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 5px;
+
+    .continuous-days {
+      text-align: center;
+
+      .count-top {
+        margin: 25px auto 0;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        line-height: 50px;
+
+        .count {
+          font-size: 50px;
+          color: rgb(252, 81, 81);
+        }
+
+        .unit {
+          font-size: 16px;
+          margin-left: 5px;
+          
+        }
+      }
+
+      .text {
+        width: 100%;
+      }
+    }
+
+    .done-days {
+      width: 100%;
+      font-size: 12px;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+  }
 }
