--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,3 +1,3 @@
-%h1 New Task
-= render 'form', task: @task
-= link_to 'Back', user_path(current_user)
+.contents
+  = render 'form', task: @task
+  = link_to 'Back', user_path(current_user)
