--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,25 +1,37 @@
 .contents
   .user-header
     .user-header__left
-      .user-info
-        = link_to edit_user_path(@user) do
-          .user-info__name
-            = @user.name
-          .user-info__img
-            = image_tag @user.image.url
       .user-menu-list
-        = link_to "#", class: "user-menu follow" do
-          フォロー
-          .count
+        = link_to "#", class: "user-menu menu-link" do
+          .user-menu__title
+            ・フォロー：
+          .user-menu__count
             100
-        = link_to "#", class: "user-menu follower" do
-          フォロワー
-          .count
+        = link_to "#", class: "user-menu menu-link" do
+          .user-menu__title
+            ・フォロワー：
+          .user-menu__count
             100
-        = link_to "#", class: "user-menu good-job" do
-          グッジョブ
-          .count
-            100
+        = link_to "/praises/#{@user.id}/index", class: "user-menu menu-link" do
+          .user-menu__title
+            ・グッジョブ
+
+      .user-box
+        - if @user.id == current_user.id
+          .user-info.user-info--myself
+            = link_to edit_user_path(@user) do
+              .user-info__name
+                = @user.name
+              .user-info__img
+                = image_tag @user.image.url
+        - else
+          .user-info
+            .user-info__name
+              = @user.name
+            .user-info__img
+              = image_tag @user.image.url
+          = link_to "#", class: "user-box__follow-btn" do
+            ＋ フォロー
     
     .user-header__center
       - if @user.id == current_user.id
