--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -3,45 +3,81 @@
   border: 1px solid lightskyblue;
   width: 100%;
   height: 160px;
-  
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
 
+  &--fixed {
+    position: fixed;
+    z-index: 1;
+  }
+
   &__left {
+    display: flex;
+    align-items: center;
 
     .user-menu-list {
       display: flex;
+      flex-direction: column;
+      justify-content: space-around;
       font-size: 12px;
-      margin: -2px 5px 0;
+      margin-right: 10px;
+      height: 100px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
 
       .user-menu {
-        margin: 0 5px;
-        text-align: center;
-        .count {
-          font-size: 11px;
-        }
+        padding: 3px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .menu-link:hover {
+        background-color: rgb(240, 240, 240);
+        border-radius: 5px;
       }
     }
-    
-    .user-info {
-      margin: 5px 10px 0 0;
-      &__name {
-        text-align: center;
-      }
-      &__img {
-        margin: 0 auto;
-        background-color: white;
-        height: 100px;
-        width: 100px;
-        border-radius: 50%;
-        border: 1px solid lightskyblue;
-        img {
+    .user-box {
+      margin: 0 15px 0 5px;
+      display: flex;
+      flex-direction: column;
+
+      .user-info {
+        &--myself:hover {
+          background-color: rgb(240, 240, 240);
+          border-radius: 5px;
+        }
+
+        &__name {
+          text-align: center;
+        }
+        &__img {
+          margin: 0 auto;
+          background-color: white;
+          height: 100px;
+          width: 100px;
           border-radius: 50%;
+          border: 1px solid lightskyblue;
+
+          img {
+            border-radius: 50%;
+          }
+        }
+      }
+      &__follow-btn {
+        background-color: white;
+        border: 1px solid lightskyblue;
+        border-radius: 25px;
+        height: 25px;
+        line-height: 25px;
+        font-size: 14px;
+        text-align: center;
+        margin-top: 3px;
+        
+        &:hover {
+          background-color: rgb(92, 192, 255);
+          color: white;
         }
       }
     }
@@ -53,7 +89,6 @@
     width: 50%;
     height: 150px;
     border: 1px solid lightskyblue;
-    // box-shadow: -1px -1px 3px gray;
     display: flex;
     
     .new-link {
@@ -64,7 +99,6 @@
         margin: 10px 0 0 5px;
       }
     }
-
     .routine-list {
       width: 96%;
       padding: 5px;
@@ -73,13 +107,11 @@
       ::-webkit-scrollbar {
         display: none;
       }
-
       &__message {
         color: gray;
         height: 20px;
         margin-top: 2px;
       }
-
       .routine {
         background-color: rgb(238, 252, 255);
         box-shadow: 1px 1px 3px lightslategray;
@@ -102,7 +134,6 @@
             font-size: 18px;
             overflow-x: auto;
             white-space: nowrap;
-
           }
           &__start-date {
             width: 20%;
@@ -113,14 +144,9 @@
             text-overflow: ellipsis;
           }
         }
-
         &__icons {        
           .routine__icon {
-            color: rgb(0, 58, 146);;
-            &--edit {
-            }
-            &--destroy {
-            }
+            color: rgb(0, 58, 146);
           }
         }
       }
@@ -135,6 +161,8 @@
     flex-direction: column;
     justify-content: space-between;
     margin-left: 5px;
+    white-space: nowrap;
+    overflow-x: scroll;
 
     .continuous-days {
       text-align: center;
@@ -150,19 +178,15 @@
           font-size: 50px;
           color: rgb(252, 81, 81);
         }
-
         .unit {
           font-size: 16px;
           margin-left: 5px;
-          
         }
       }
-
       .text {
         width: 100%;
       }
     }
-
     .done-days {
       width: 100%;
       font-size: 12px;
@@ -170,4 +194,16 @@
       margin-bottom: 10px;
     }
   }
+}
+
+.index-title {
+  background-color: white;
+  border-bottom: 1px solid lightgray;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 35px;
+  margin-top: 160px;
+  text-align: center;
+  padding: 5px;
 }
