--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,41 +1,3 @@
 .contents
   .task-list
-    - @tasks.each do |task|
-      .task
-        .task__left
-          = link_to user_path(task.user_id) do
-            .user-info
-              .user-info__name
-                = task.user.name
-              .user-info__image
-                = image_tag task.user.image.url
-
-        .task__right
-          .task__main
-            .task__main__left-box
-              .date
-                = task.date.strftime('%-m月%-d日')
-
-              - if task.score == "done"
-                = icon('fa', 'check', class: "score-icon score-icon--done")
-              - else task.score == "bad"
-                = icon('fa', 'times', class: "score-icon score-icon--bad")
-
-              .body
-                = task.body
-
-            .task__main__right-box
-              .routine-list
-                - task.user.routines.each do |r|
-                  .routine
-                    = r.content
-              - if current_user.already_praised?(task)
-                = link_to "/praises/#{task.id}/destroy", method: :post, class: "good-job good-job--on" do
-                  = icon('far', 'thumbs-up', class: "good-job__btn good-job--on") 
-                  .good-job__count
-                    = task.praises.count
-              - else
-                = link_to "/praises/#{task.id}/create", method: :post, class: "good-job good-job--off" do
-                  = icon('far', 'thumbs-up', class: "good-job__btn good-job--off")
-                  .good-job__count
-                    = task.praises.count
+    = render partial: "posts", locals: { tasks: @tasks }
