--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -44,7 +44,7 @@
       flex-direction: column;
 
       .user-info {
-        &--myself:hover {
+        &--link:hover {
           background-color: rgb(240, 240, 240);
           border-radius: 5px;
         }
