--- a/app/views/praises/index.html.haml
+++ b/app/views/praises/index.html.haml
@@ -18,7 +18,7 @@
 
       .user-box
         - if @user.id == current_user.id
-          .user-info.user-info--myself
+          .user-info.user-info--link
             = link_to edit_user_path(@user) do
               .user-info__name
                 = @user.name
