--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,5 +20,6 @@
           .menu-list
             = link_to "新規登録", new_user_registration_path, class: "menu-list__menu"
             = link_to "ログイン", new_user_session_path, class: "menu-list__menu"
-    = render 'layouts/flash'
-    = yield
+    .contents
+      = render 'layouts/flash'
+      = yield
