create link to follow_index

--- a/app/views/users/_user_info.html.haml
+++ b/app/views/users/_user_info.html.haml
@@ -1,5 +1,5 @@
 .user-menu-list
-  = link_to "#", class: "user-menu menu-link" do
+  = link_to follow_index_user_path(@user), class: "user-menu menu-link" do
     .user-menu__title
       ・フォロー：
     .user-menu__count
