--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
     <div class="field">
       <%= f.label :ニックネーム %><br />
-      <%= f.text_field :name, autofocus: true %>
+      <%= f.text_field :name, autofocus: true, maxlength: 12 %>
     </div>
 
     <div class="field">
