--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -9,7 +9,7 @@
 
 .form
   = form_with(model: @user, local: true) do |f|
-    = f.text_field :name, class: 'form__user__name', placeholder: 'type a name'
+    = f.text_field :name, class: 'form__user__name', maxlength: 12, placeholder: 'ニックネーム（最大12文字）'
     = f.label :image, class: 'form__user__image' do
       = icon('fas', 'image', class: 'form__user__icon')
       = f.file_field :image, class: 'form__user__file'
