--- a/app/assets/stylesheets/_user_index.scss
+++ b/app/assets/stylesheets/_user_index.scss
@@ -16,6 +16,7 @@
 
     &__left {
       width: 125px;
+      margin: auto 0;
       
       .user-info {
         text-align: center;
@@ -65,6 +66,11 @@
           line-height: 30px;
           margin-bottom: 10px;
           padding-left: 10px;
+
+          &--none {
+            background-color: rgb(228, 228, 228);
+            color: gray;
+          }
         }
       }
     }
