--- a/app/views/tasks/_posts.html.haml
+++ b/app/views/tasks/_posts.html.haml
@@ -24,9 +24,14 @@
 
         .task__main__right-box
           .routine-list
-            - task.user.routines.each do |r|
-              .routine
-                = r.content
+            - if task.user.routines.length != 0
+              - task.user.routines.each do |r|
+                .routine
+                  = r.content
+            - else 
+              .routine.routine--none
+                習慣が設定されていません
+
           - if current_user.already_praised?(task)
             = link_to "/praises/#{task.id}/destroy", method: :post, class: "good-job good-job--on" do
               = icon('far', 'thumbs-up', class: "good-job__btn good-job--on") 
