--- a/app/views/users/_calendar.html.haml
+++ b/app/views/users/_calendar.html.haml
@@ -17,12 +17,12 @@
   - tasks.each do |task|
     -if task.score
       - if current_user.already_praised?(task)
-        = link_to "/praises/#{task.id}/destroy", method: :post, class: "good-job good-job--on" do
+        = link_to task_praise_path(task), method: :delete, class: "good-job good-job--on" do
           = icon('far', 'thumbs-up', class: "good-job__btn good-job--on") 
           .good-job__count
             = task.praises.count
       - else
-        = link_to "/praises/#{task.id}/create", method: :post, class: "good-job good-job--off" do
+        = link_to task_praises_path(task), method: :post, class: "good-job good-job--off" do
           = icon('far', 'thumbs-up', class: "good-job__btn good-job--off")
           .good-job__count
             = task.praises.count
@@ -42,28 +42,3 @@
       = link_to task_path(task) do
         .task_body
           = simple_format task.body
-
-  -# - else
-  -#   - tasks.each do |task|
-  -#     -if task.score
-  -#       - if current_user.already_praised?(task)
-  -#         = link_to "/praises/#{task.id}/destroy", method: :post, class: "good-job good-job--on" do
-  -#           = icon('far', 'thumbs-up', class: "good-job__btn good-job--on") 
-  -#           .good-job__count
-  -#             = task.praises.count
-  -#       - else
-  -#         = link_to "/praises/#{task.id}/create", method: :post, class: "good-job good-job--off" do
-  -#           = icon('far', 'thumbs-up', class: "good-job__btn good-job--off")
-  -#           .good-job__count
-  -#             = task.praises.count
-
-  -#     - if task.score == "done"
-  -#       = icon('fa', 'check', class: "task-icon task-icon--check")
-  -#     - elsif task.score == "bad"
-  -#       = icon('fa', 'times', class: "task-icon task-icon--bad")
-  -#     - else
-  -#       .task_score
-
-  -#     - if task.body != ""
-  -#       .task_body
-  -#         = simple_format task.body
