--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -44,10 +44,6 @@
       flex-direction: column;
 
       .user-info {
-        &--link:hover {
-          background-color: rgb(240, 240, 240);
-          border-radius: 5px;
-        }
 
         &__name {
           text-align: center;
@@ -62,6 +58,25 @@
 
           img {
             border-radius: 50%;
+          }
+        }
+        &__edit {
+          display: none;
+          position: absolute;
+          background-color: rgba(255, 255, 255, 0.733);
+          top: 20px;
+          left: 30px;
+          width: 40px;
+          text-align: center;
+          font-size: 12px;
+          border-radius: 5px;
+        }
+        &--link:hover {
+          background-color: rgb(240, 240, 240);
+          border-radius: 5px;
+          position: relative;
+          .user-info__edit {
+            display: block;
           }
         }
       }
