--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -130,7 +130,8 @@
       &__message {
         color: gray;
         height: 20px;
-        margin-top: 2px;
+        margin-bottom: 5px;
+        text-align: center;
       }
       .routine {
         background-color: rgb(238, 252, 255);
