--- a/app/views/users/_routines_myself.html.haml
+++ b/app/views/users/_routines_myself.html.haml
@@ -1,7 +1,7 @@
 .routine-list
   - if @user.routines.length == 0
     .routine-list__message
-      ← 習慣にしたいことを記入しよう！
+      習慣にしたいことを記入しよう！
 
   - @user.routines.each do |routine|
     .routine
