--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 *= require simple_calendar
 */
 @import "reset";
-@import "welcome";
+@import "common";
 @import "tasks";
 @import "users";
 @import "user_index";
