--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -8,12 +8,12 @@
   = @task.body
 
 - if current_user.already_praised?(@task)
-  = link_to "/praises/#{@task.id}/destroy", method: :post, class: "good-job good-job--on" do
+  = link_to task_praise_path(@task, id: current_user), method: :delete, class: "good-job good-job--on" do
     = icon('far', 'thumbs-up', class: "good-job__btn good-job--on") 
     .good-job__count
       = @task.praises.count
 - else
-  = link_to "/praises/#{@task.id}/create", method: :post, class: "good-job good-job--off" do
+  = link_to task_praises_path(@task), method: :post, class: "good-job good-job--off" do
     = icon('far', 'thumbs-up', class: "good-job__btn good-job--off")
     .good-job__count
       = @task.praises.count
