--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
+    .modal-wrapper
     %header
       .nav-bar
         = link_to "トップページ", root_path, class: "logo"
